--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 github.client.id =c4a94372e9030237102e
 github.client.secret =3f408da13cb2cc00939ac9a4a1c2ed4123d59588
-github.redirect.uri =https://8080/callback
+github.redirect.uri =http://localhost:8080/callback
 spring.datasource.url =jdbc:h2:~luntan
 spring.datasource.username =luntan
 spring.datasource.password =luntan
