导航条封装

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username =luntan
 spring.datasource.password =luntan
 # 非必填可根据 url 推断
 spring.datasource.driver-class-name =org.h2.Driver
+spring.thymeleaf.cache=false
+mybatis.configuration.map-underscore-to-camel-case=true
