--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password =luntan
 spring.datasource.driver-class-name =org.h2.Driver
 spring.thymeleaf.cache=false
 mybatis.configuration.map-underscore-to-camel-case=true
+#generatorœ‡πÿ≈‰÷√
+mybatis.type-aliases-package=com.coderyin.luntan.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
