--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ mybatis.configuration.map-underscore-to-camel-case=true
 #generatorœ‡πÿ≈‰÷√
 mybatis.type-aliases-package=com.coderyin.luntan.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+#log
+logging.file.path=logs/luntan.log
+logging.level.root=info
+logging.level.com.coderyin.luntan.mapper=debug
+logging.file.max-size=10MB
+logging.file.max-history=30
